welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:13: error: Missing closing brace `}' assumed here
 }
 ^